--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@uniswap/widgets",
+  "name": "@cndllabs/widgets",
   "description": "Uniswap Interface",
   "homepage": "https://github.com/Uniswap/widgets#readme",
   "repository": "https://github.com/Uniswap/widgets",
@@ -66,7 +66,7 @@
     "@uniswap/smart-order-router": "^2.5.26",
     "@uniswap/token-lists": "^1.0.0-beta.27",
     "@uniswap/v2-sdk": "^3.0.1",
-    "@uniswap/v3-sdk": "^3.8.2",
+    "@cndllabs/v3-sdk": "^3.8.2",
     "@web3-react/core": "8.0.30-beta.0",
     "@web3-react/eip1193": "8.0.23-beta.0",
     "@web3-react/empty": "8.0.17-beta.0",
@@ -151,7 +151,7 @@
     "@uniswap/default-token-list": "^3.2.0",
     "@uniswap/v2-core": "1.0.0",
     "@uniswap/v2-periphery": "^1.1.0-beta.0",
-    "@uniswap/v3-core": "1.0.0",
+    "@cndllabs/v3-core": "1.0.0",
     "@uniswap/v3-periphery": "^1.1.1",
     "@walletconnect/ethereum-provider": "^1.7.1",
     "@web3-react/metamask": "8.0.24-beta.0",
