--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "@cndllabs/widgets",
-  "description": "Uniswap Interface",
-  "homepage": "https://github.com/Uniswap/widgets#readme",
-  "repository": "https://github.com/Uniswap/widgets",
+  "description": "Carthage Interface",
+  "homepage": "https://github.com/FortressDEX/widgets#readme",
+  "repository": "https://github.com/FortressDEX/widgets",
   "files": [
     "dist"
   ],
@@ -62,7 +62,7 @@
     "@reduxjs/toolkit": "^1.6.1",
     "@uniswap/redux-multicall": "^1.1.1",
     "@uniswap/router-sdk": "^1.0.3",
-    "@uniswap/sdk-core": "^3.0.1",
+    "@cndllabs/sdk-core": "^3.0.1",
     "@uniswap/smart-order-router": "^2.5.26",
     "@uniswap/token-lists": "^1.0.0-beta.27",
     "@uniswap/v2-sdk": "^3.0.1",
